--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0;
     background: linear-gradient(135deg, #0e3b56 0%, #0993ab 100%);
@@ -9,3 +10,21 @@ body {
     height: 100vh;
 }
 
+.login {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+    width: 400px;
+    height: 400px;
+    border: 5px solid gray;
+    padding: 5px;
+    margin: auto;
+}
+
+.login .avatar {
+    height: 100px;
+    border-radius: 50%;
+    
+}
