--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,16 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
 body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
-    padding: 0;
     background: linear-gradient(135deg, #0e3b56 0%, #0993ab 100%);
     background-size: cover;
-    font-family: sans-serif;
     height: 100vh;
 }
 
-.login {
+.formulario {
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -18,9 +22,11 @@ body {
     background-color: aliceblue;
     width: 400px;
     height: 400px;
-    border: 5px solid gray;
+    border-radius: 10%;
+    box-shadow: 2px 2px 2px black;
     padding: 5px;
     margin: auto;
+
 }
 
 .login .avatar {
