--- a/frontend/css/stilitos.css
+++ b/frontend/css/stilitos.css
@@ -19,45 +19,29 @@
 body {
     display: flex;
     flex-flow: column;
-    align-items: center;
     background: linear-gradient(135deg, var(--color-uno) 0%, var(--color-tres) 100%);
     background-size: cover;
     min-height: 100vh;
 }
 
-.formulario {
-    display: flex;
-    flex-flow: column;
-    padding: 30px;
-    margin: 10vh;
+.contenedor {
+    display: grid;
+    grid-template-columns: 15% 85%;
+    width: 100%;
+    height: 94vh;
     align-items: center;
-    background-color: var(--fondo-caja);
-    width: 400px;
-    max-height: 100vh;
-    border-radius: 10px;
-    box-shadow: 0 0 27px var(--sombra-caja) ;
-    overflow: hidden;
+    padding:10px;
 }
 
-.formulario .avatar {
-    width:  100px;
-    height: 100px;
-    border-radius: 50%;
-    
+.uno {
+    background-color: red;
+    height: 100%;
+    margin: 0 5vh 0 0 ;
 }
 
-.formulario, .username, .password{
-    display: flex;
-}
-
-.formulario a {
-    /*Con el text decoration quitamos el hecho de que al dar click se ponga ázul pues la configuración por defecto, así como el delineado con la raya*/
-    text-decoration: none;
-    color: var(--color-tres);
-}
-
-.formulario a:hover {
-    color: var(--color-uno);
+.dos {
+    background-color: black;
+    height: 100%;
 }
 
 footer{
