--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -60,6 +60,26 @@ body {
     color: var(--color-uno);
 }
 
+/*ESTILOS DE DASHBOARD*/
+.navbar{
+    width: 100%;
+    border-radius: 0 0 23px 23px;
+}
+
+.contenido {
+    width: 100%;
+    height: 100%;
+    border: black;
+    background-color: red;
+}
+
+.bi {
+    text-align: left;
+    font-size: 20px;
+    
+}
+/*------------*/
+
 footer{
     display: flex;
     flex-direction: row;
