Update Files Wrongs

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -60,7 +60,7 @@ body {
     color: var(--color-uno);
 }
 
-/*ESTILOS DE DASHBOARD*/
+/*ESTILOS DEL DASHBOARD*/
 .navbar{
     width: 100%;
     border-radius: 0 0 23px 23px;
