--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -107,6 +107,71 @@ label{
 
 /*------------*/
 
+/*Inicio Css*/
+
+.section{
+    display: flex;
+    flex-flow: row;
+    border: white solid 2px;
+    width: 85vw;
+    height: 85vh;
+    border-radius: 2%;
+    margin: 10px;
+    padding: 30px;
+}
+
+.izquierda, .derecha {
+    display: flex;
+    flex-flow: column;
+    border: 1px solid white;
+    width: auto;
+    overflow: hidden;
+    padding: 30px;
+}
+
+.izquierda {
+    width: 30vw;
+    height: 70vh;
+    margin: auto;
+    overflow: auto;
+}
+
+.izquierda h2{
+    height: 20vh;
+    color: white;
+    font-size: 7vh;
+    border: 5px solid black;
+    
+}
+
+.izquierda p {
+    font-size: 20px;
+    padding: 10px;
+    color: white;
+}
+
+.derecha {
+    width: 50%;
+    height: 80%;
+    text-align: center;
+    align-self: center;
+}
+
+.derecha img {
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+}
+
+.titulo-principal {
+    color:green;
+    text-align: center;
+}
+
+.descripcion {
+    text-align: justify;
+}
+
 footer{
     display: flex;
     flex-direction: row;
@@ -130,13 +195,13 @@ footer .footer-name {
 }
 
 footer .footer-rights {
-  line-height: 1px;
-  text-align: center;
+    line-height: 1px;
+    text-align: center;
 }
 footer .footer-terms {
-  padding-right: 20px;
-  line-height: 1px;
-  text-align: center;
+    padding-right: 20px;
+    line-height: 1px;
+    text-align: center;
 }
 
 
