--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,28 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
 :root {
-    /* font family */
-    --fnt-font-family: 'Inter', sans-serif;
-
-    /* tipo de grosor font family */
-    --fnt-font-bold: 700;
-    --fnt-font-regular: 400;
+    --fuente: 'Quicksand' ,sans-serif;
+    --color-uno: #0e3b56;
+    --color-dos: #0d627c;
+    --color-tres: #0993ab;
+    --color-cuatro: #05dbe3;
+    --color-cinco: #0ffff8;
+    --fondo-caja: aliceblue;
+    --sombra-caja: rgb(36, 23, 23);
 }
 
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: var(--fuente);
 }
 
-body{
+body {
     background: linear-gradient(rgba(5,7,12,0.55), rgba(5,7,12,0.55)), url(../img/background.jpg);
     background-size: cover;
     font-family: sans-serif;
 }
+
 .main-container {
     width: 100%;
-    height: 96vh;
+    height: 94.4vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,6 +52,13 @@ body{
     
 }
 
+
+
+h2{
+    margin-left: 40px;
+    margin-top: 7px;
+}
+
 .form-control{
     margin-bottom: 10px;
 }
@@ -68,6 +77,68 @@ body{
     color: white;
 }
 
+
+
+
+
+/*ESTILOS DEL DASHBOARD*/
+.navbar{
+    width: 100%;
+    border-radius: 0 0 23px 23px;
+}
+
+.contenido {
+    width: 100%;
+    height: 100%;
+    border: black;
+    background-color: red;
+    background-size: cover;
+}
+
+.bi {
+    text-align: left;
+    font-size: 20px;
+    
+}
+
+
+.main-section{
+    margin:0 auto;
+    margin-top:5%;
+}
+.card{
+	opacity: .95;
+}
+.card-body{
+    background-color: #d1d3d6;
+    box-shadow: 0px 0px 3px #848484;
+}
+
+label{
+	font-weight: bold;
+}
+
+.nav-tabs .nav-item a:not(.active){
+	background-color: #d1d3d6;
+}
+
+.nav-tabs{
+	border-bottom:0px;
+}
+
+/*------------*/
+
+/*Inicio Css*/
+
+
+.main-container-inicio{
+    width: 100%;
+    height: 6.8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 footer{
     height: 45px;
     width: 100%;
@@ -75,11 +146,79 @@ footer{
     color: white;
  }
 
- h2{
-    margin-left: 40px;
-    margin-top: 7px;
+
+
+
+ /*Registro*/
+
+ .main-container-registro {
+    width: 100%;
+    height: 94.4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
-::placeholder{
-    color: aqua;
+.login-registro{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    background:rgba(5,7,12,0.40);
+    outline: none;
+
+    border-radius: 10px;
+    width: 500px;
+    height: 650px;
+    padding: 5px;
+    margin: auto;
+}
+
+.avatar-registro {
+    height: 130px;
+
+    
+}
+
+.form-control{
+    margin-bottom: 10px;
+}
+
+.btn-primary{
+    width: 100%;
+    margin-top: 15px;
+}
+
+.link{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
+.login{
+    color: white;
+}
+
+.registrate{
+    color: white;
+}
+
+.fecha-text{
+    color: white;
+    font-size: 10px;
+}
+
+.tienes-cuenta{
+    color: white;
+}
+
+
+/*Pantalla de consejos*/
+
+.main-container-consejos{
+    width: 100%;
+    height: 88.4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
