--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -217,8 +217,64 @@ footer{
 
 .main-container-consejos{
     width: 100%;
-    height: 88.4vh;
+    height: 180vh;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.section-finanzas{
+    color: white;
+    background:rgba(5,7,12,0.40);
+    outline: none;
+
+    border-radius: 10px;
+    width: 1700px;
+    height: 1580px;
+    padding: 5px;
+    margin: auto;
+}
+
+.titulo-finanzas{
+    padding-top: 50px;
+    text-align:center;
+    font-size: 100px;
+
+}
+
+.descripcion-finanzas{
+    
+    padding-left: 100px;
+    padding-top: 60px;
+    font-size: 30px;
+    width: 1550px;
+    text-align:center;
+    
+}
+
+.videos-finanzas{
+    padding-left: 100px;
+    padding-top: 60px;
+}
+
+.video-1{
+    margin-bottom: 35px;
+    border-radius: 15px;
+}
+
+.video-2{
+    margin-bottom: 35px;
+    border-radius: 15px;
+    margin-left: 35px;
+}
+
+.video-3{
+    margin-bottom: 35px;
+    border-radius: 15px;
+}
+
+.video-4{
+    margin-bottom: 35px;
+    border-radius: 15px;
+    margin-left: 35px;
 }
